   (<https://bugs.gnu.org/64666>)
** Avoid module resolution in 'call-with-new-thread', which could deadlock
   (<https://bugs.gnu.org/62691>)
** Fix deadlock in 'join-thread' when timeout is hit
   (<https://bugs.gnu.org/55356>)
** 'read-u8' in (scheme base) now defaults to (current-input-port)
   (<https://bugs.gnu.org/62690>)
** 'ftw' now correctly deals with directory permissions
   (<https://bugs.gnu.org/55344>)
** 'make-custom-port' now honors its #:conversion-strategy argument
** 'eval-string' respects #:column (previously it was set to the #:line)
** 'string->date' now allows a colon in the ISO 8601 zone offset
** 'system*' no longer fiddles with the process' signal handlers
   (<https://bugs.gnu.org/70144>)
** Hashing of UTF-8 symbols with non-ASCII characters avoids corruption
   (<https://bugs.gnu.org/56413>)

This issue could cause `scm_from_utf8_symbol' and
`scm_from_utf8_symboln` to incorrectly conclude that the symbol hadn't
already been interned, and then create a new one, which of course
wouldn't be `eq?' to the other(s).  The incorrect hash was the result of
a buffer overrun, and so might vary.  This problem affected a number of
other operations, given the internal use of those functions.



Changes in 3.0.9 (since 3.0.8)

* Notable changes

* New interfaces and functionality

** New `spawn' procedure to spawn child processes

The new `spawn' procedure creates a child processes executing the given
program.  It lets you control the environment variables of that process
and redirect its standard input, standard output, and standard error
streams.

Being implemented in terms of `posix_spawn', it is more portable, more
robust, and more efficient than the combination of `primitive-fork' and
`execl'.  See "Processes" in the manual for details, and see the 2019
paper entitled "A fork() in the road" (Andrew Baumann et al.) for
background information.

`system*', as well as the `open-pipe' and `pipeline' procedures of